--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 
+@font-face{
+  font-family: 'Calibri Regular';
+  src: url('Calibri Regular.ttf') format('truetype');
+}
+
+
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+  font-family: 'Calibri Regular';
 }
 
 /* General */
@@ -155,5 +162,63 @@ section:nth-of-type(3) {
 
 	p{
 
-    font-size: 20px;
+    font-size: 19px;
   }
+
+
+  /* RESPONSIVE*/
+
+  @media (max-width: 982px){
+
+    .main .text {
+      width: 48%;
+  }
+  .contain-img {
+    width: 50%;
+}
+
+  }
+
+  @media (max-width: 916px){
+
+  .redes ul {
+    width: 100%;
+    height: 100px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+}
+
+}
+
+@media (max-width: 916px){
+
+.redes {
+  margin: 0px;
+  color: rgb(255, 255, 255);
+  font-size: 50px;
+  text-align: center;
+  list-style: none;
+  width: 50%;
+  height: 100px;
+  padding: 0px;
+}
+
+}
+
+
+@media (max-width: 500px){
+
+nav a:not(:last-child) {
+  margin-right: -6px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease-in-out;
+  padding-left: 15px;
+}
+
+}
