--- a/style.css
+++ b/style.css
@@ -210,6 +210,12 @@ section:nth-of-type(3) {
 
 @media (max-width: 500px){
 
+  
+.uriel{
+  margin-left: 10px;
+}
+
+
 nav a:not(:last-child) {
   margin-right: -6px;
 }
