--- a/style.css
+++ b/style.css
@@ -210,6 +210,14 @@ section:nth-of-type(3) {
 
 @media (max-width: 500px){
 
+  .uriel {
+    margin-left: 10px;
+    padding-left: 10px;
+}
+
+
+
+
   p {
     font-size: 15px;
     width: 200%;
@@ -231,6 +239,23 @@ a {
   color: white;
   transition: color 0.3s ease-in-out;
   padding-left: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease-in-out;
+  padding-left: 15px;
+  width: 22%;
+  /* padding: inherit; */
+  padding-right: -65px;
+  /* margin-left: -8px; */
+}
+
+.A {
+  margin: 16px;
+  margin-left: 18px;
+  margin-right: 49px;
 }
 
 }
