--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 @font-face{
   font-family: 'Calibri Regular';
   src: url('Calibri Regular.ttf') format('truetype');
@@ -50,10 +51,9 @@ nav {
   z-index: 10;
 }
 
-
 #fix {
-    position: unset;
-    width: 74%;
+  position: static;
+  width: 50%;
 }
 
 nav a:not(:last-child) {
@@ -221,6 +221,11 @@ section:nth-of-type(3) {
     padding-left: 10px;
 }
 
+#info{
+
+  margin-right: 45px;
+  margin-left: -3px;
+}
 
 
 
@@ -230,7 +235,7 @@ section:nth-of-type(3) {
     z-index
 }
 .uriel{
-  margin-left: 10px;
+  margin-left: 4px;
 }
 .text2{
   width: 100%;
@@ -262,6 +267,23 @@ a {
   margin: 16px;
   margin-left: 18px;
   margin-right: 49px;
+}
+
+}
+
+
+.ini {
+  width: 25%;
+  margin: 0px auto;
+  height: 16px;
+}
+
+
+@media (max-width: 569px){
+
+.ini{
+  height: 42px;
+  width: 30%
 }
 
 }
