--- a/style.css
+++ b/style.css
@@ -283,8 +283,19 @@ a {
 
 	h1 {
     font-size: 20px;
-		font-size: 10px;
+		
 		}
+	
+		h2 {
+    font-size: 15px;
+		
+		}
+	
+	
+	.main .text {
+    width: 50%;
+    font-size: 10px;
+}
 
 	
 	.contain-img > img {
